--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 10px;
   &:hover {
     background-color: #444;
     cursor: pointer;
