--- a/src/App.css
+++ b/src/App.css
@@ -7,78 +7,85 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #333;
-}
 
-.container {
-  max-width: 1200px;
-  height: 100vh;
-  background-color: #fff;
-  margin: 0 auto;
-  padding: 20px;
-}
+  .app-container {
+    max-width: 1200px;
+    height: 100vh;
+    background-color: #fff;
+    margin: 0 auto;
+    padding: 20px;
 
-.drop-zone {
-  width: 100%;
-  height: 200px;
-  background-color: #333;
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  &:hover {
-    background-color: #444;
-    cursor: pointer;
-  }
-}
+    .drop-zone {
+      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 
-.file-list {
-  width: 100%;
-  border: 1px solid #ccc;
-  border-collapse: collapse;
-  > thead {
-    background-color: #f4f4f4;
-    text-align: left;
-  }
-}
+      width: 100%;
+      height: 200px;
+      background-color: #333;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      &:hover {
+        background-color: #444;
+        cursor: pointer;
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
+      }
+    }
 
-.icon {
-  margin-right: 5px;
-}
+    .file-list-container {
+      width: 100%;
+      max-height: 400px;
+      overflow-y: auto;
+      margin-top: 20px;
 
-.file-list-container {
-  width: 100%;
-  max-height: 400px;
-  overflow-x: auto;
-  margin-top: 20px;
-}
+      .file-list {
+        width: 100%;
+        border: 1px solid #ccc;
+        border-collapse: collapse;
+        > thead,
+        th {
+          background-color: #f4f4f4;
+          text-align: left;
+          position: sticky;
+          top: 0;
+          padding: 10px;
+        }
 
-td {
-  padding: 10px;
-  border: 1px solid #ccc;
-}
+        td {
+          padding: 10px;
+          border: 1px solid #ccc;
+        }
+      }
 
-.files-count {
-  margin-top: 20px;
-  font-size: 16px;
-}
+      .file-name-container {
+        display: flex;
+        align-items: center;
+        .file-name-icon {
+          margin-right: 5px;
+        }
+      }
+    }
 
-.file-name-container {
-  display: flex;
-  align-items: center;
-}
+    .files-count {
+      margin-top: 20px;
+      font-size: 1rem;
+    }
 
-.btn-upload {
-  margin-top: 20px;
-  width: 100%;
-  background-color: #28a745;
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  &:hover {
-    background-color: #218838;
+    .btn-upload {
+      margin-top: 20px;
+      width: 100%;
+      background-color: #28a745;
+      color: #fff;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+      &:hover {
+        background-color: #218838;
+      }
+    }
   }
 }
 
@@ -91,6 +98,6 @@ td {
   }
   table,
   .files-count {
-    font-size: 12px;
+    font-size: 0.75rem;
   }
 }
