--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ body {
 
     .drop-zone {
       box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-
+      transition: all 0.3s ease;
       width: 100%;
       height: 200px;
       background-color: #333;
@@ -29,6 +29,11 @@ body {
       &:hover {
         background-color: #444;
         cursor: pointer;
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
+      }
+
+      &.drag-over {
+        background-color: #555;
         box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
       }
     }
