--- a/src/App.scss
+++ b/src/App.scss
@@ -26,6 +26,7 @@ body {
       justify-content: center;
       align-items: center;
       gap: 10px;
+
       &:hover {
         background-color: #444;
         cursor: pointer;
@@ -48,7 +49,8 @@ body {
         width: 100%;
         border: 1px solid #ccc;
         border-collapse: collapse;
-        > thead,
+
+        >thead,
         th {
           background-color: #f4f4f4;
           text-align: left;
@@ -66,6 +68,7 @@ body {
       .file-name-container {
         display: flex;
         align-items: center;
+
         .file-name-icon {
           margin-right: 5px;
         }
@@ -87,8 +90,30 @@ body {
       border-radius: 5px;
       cursor: pointer;
       box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+
       &:hover {
         background-color: #218838;
+      }
+
+      &:disabled {
+        background-color: #6c757d;
+        cursor: not-allowed;
+      }
+    }
+
+    .btn-clear {
+      margin-top: 10px;
+      width: 100%;
+      background-color: #dc3545;
+      color: #fff;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+
+      &:hover {
+        background-color: #c82333;
       }
     }
   }
@@ -98,9 +123,11 @@ body {
   .container {
     padding: 10px;
   }
+
   .drop-zone {
     height: 150px;
   }
+
   table,
   .files-count {
     font-size: 0.75rem;
