--- a/src/App.scss
+++ b/src/App.scss
@@ -39,6 +39,23 @@ body {
       }
     }
 
+    .folder-name-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin-top: 20px;
+
+
+      &:focus {
+        >* {
+          background-color: #444;
+          cursor: pointer;
+        }
+      }
+    }
+
+
     .file-list-container {
       width: 100%;
       max-height: 400px;
